# rabbit-hole

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
backend/: README.md  main.py  models.py  prompts.yaml  storage.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: chat.ts  equation.ts  index.ts  pdf.ts
frontend/src/components/: context-menu.tsx  equation-annotation.tsx  equation-tooltip.tsx  figure-tooltip.tsx  highlight-markers.tsx  pdf-viewer.tsx  project-selector.tsx  rabbit-hole-graph.tsx  rabbit-hole-popup.tsx  rabbit-hole-tooltip.tsx  toolbar.tsx
frontend/src/components/reference-tracer/: citation-context-menu.tsx  index.ts  rabbit-map.tsx
frontend/src/hooks/: useEquationStore.ts  useFigureStore.ts
frontend/src/styles/: globals.css
frontend/src/utils/: bibliography-parser.ts  equation-extractor.ts  figure-extractor.ts  reference-detector.ts
