[project]
name = "rabbit-hole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "google-genai>=0.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]
